--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 <section class="scen one">
     <header>
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>kimhyunjin.</h1>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis modi beatae soluta tempora itaque velit tenetur enim fuga atque, sunt!
     </header>
 </section>
