--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section class="scen one">
     <header>
         <h1>kimhyunjin.</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis modi beatae soluta tempora itaque velit tenetur enim fuga atque, sunt!
+        take a test.
     </header>
 </section>
 <section class="scen two">
