--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 </section>
 <section class="scen three">
     <header>
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis modi beatae soluta tempora itaque velit tenetur enim fuga atque, sunt!
+        <h1>kimhyunjin.</h1>
+        take a test.
     </header>
 </section>
 </body>
