--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section class="scen one">
     <header>
         <h1>kimhyunjin.</h1>
-        take a test.
+        I did study
     </header>
 </section>
 <section class="scen two">
