--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <section class="scen three">
     <header>
         <h1>kimhyunjin.</h1>
-        take a test.
+        why did you come to korea?
     </header>
 </section>
 </body>
