--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 <section class="scen one">
     <header>
         <h1>kimhyunjin.</h1>
-        I did study
+        I did study.
     </header>
 </section>
 <section class="scen two">
     <header>
         <h1>Lorem ipsum dolor sit amet.</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis modi beatae soluta tempora itaque velit tenetur enim fuga atque, sunt!
+        I have to study.
     </header>
 </section>
 <section class="scen three">
