--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <li> <a href="#one" class="scroll btn blue">김현진</a></li>
         <li> <a href="#two" class="scroll btn blue">보유기술</a></li>
         <li> <a href="#three" class="scroll btn blue">자격증</a></li>
-        <li> <a href="#four" class="scroll btn red">연락</a></li>
+        <li> <a href="#four" class="scroll btn red">연락처</a></li>
         <li> <a href="#top" class="top"><div class="go_top"><span>TOP</span></div></a> </li>
     </ul>
 </div>
@@ -200,7 +200,7 @@
     <header>
         <h1>Contact.</h1><br><br>
         <div class="article left">
-            Email : <a href="mailto:khjzzm@gmail.com" target="_blank">khjzzm@gmail.com</a> <br>
+            Email : <a href="mailto:khjzzm@gmail.com">khjzzm@gmail.com</a> <br>
             GitHub : <a href="https://github.com/khjzzm" target="_blank">https://github.com/khjzzm</a> <br>
             blog : <a href="http://sendthesignal.tistory.com/" target="_blank">http://sendthesignal.tistory.com</a> <br><br>
             <img src="img/photo1.jpeg" style="height: 300px; width: 300px;">
