--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         <div class="article text">
             전자상거래 전공 <br>
             컴퓨터공학과 부전공 <br>
+            링크허브 <br>
         </div>
     </article>
 </section>
